<resources>
    <string name="app_name">Kouvee Management</string>

    <!--STRING FOR MENU-->
    <string-array name="owner_menu">
        <item>Employee</item>
        <item>Service</item>
        <item>Pet Size</item>
        <item>Pet Type</item>
        <item>Supplier</item>
        <item>Product</item>
        <item>Order Product</item>
    </string-array>

    <!--MENU DESC-->
    <string-array name="owner_desc">
        <item>Employee is a person who is paid to work for somebody. In this menu, Admin can manage (contains create, read, update, delete and search) everything about it. </item>
        <item>Service is the serving of customers in this pet shops. In this menu, Admin can manage (contains create, read, update, delete and search) everything about it.</item>
        <item>Pet Size is the size of pet which is provided by this pet shops. In this menu, Admin can manage (contains create, read, update, delete and search) everything about it.</item>
        <item>Pet Type is the type of pet which is provided by this pet shops. In this menu, Admin can manage (contains create, read, update, delete and search) everything about it.</item>
        <item>Supplier is a person or company that supplies our product. In this menu, Admin can manage (contains create, read, update, delete and search) everything about it.</item>
        <item>Product is a thing that is grown, produced or created by our pet shops. In this menu, Admin can manage (contains create, read, update, delete and search) everything about it.</item>
        <item>Order product is a transaction for order product to our suppliers. Admin can manage (contains create, read, update, search and cancel) and monitor order product progress in this menu. </item>
    </string-array>

    <!--MENU IMAGE-->
    <array name="owner_image">
        <item>@drawable/employee</item>
        <item>@drawable/service</item>
        <item>@drawable/pet_size</item>
        <item>@drawable/pet_type</item>
        <item>@drawable/supplier</item>
        <item>@drawable/product</item>
        <item>@drawable/order_product</item>
    </array>

    <!--STRING FOR MENU-->
    <string-array name="cs_menu">
        <item>Customer</item>
        <item>Customer\'s Pet</item>
        <item>Product Transaction</item>
        <item>Service Transaction</item>
    </string-array>

    <!--MENU DESC-->
    <string-array name="cs_desc">
        <item>Customer is a person who buys our product or services. In this menu, Customer Service can manage (contains create, read, update, delete and search) everything about it.</item>
        <item>Customer\'s Pet is an animal, a bird, etc. that our customer have at home. In this menu, Customer Service can manage (contains create, read, update, delete and search) everything about it.</item>
        <item>Product Transaction is a piece of business that is done between out pet shop and our customer, an act of buying or selling product which we have. Customer Service can manage and monitor it, not as far as Cashier.</item>
        <item>Service Transaction is a piece of business that is done between out pet shop and our customer, an act of doing service which we have. Customer Service can manage and monitor it, not as far as Cashier.</item>
    </string-array>

    <!--MENU IMAGE-->
    <array name="cs_image">
        <item>@drawable/customer</item>
        <item>@drawable/customer_pet</item>
        <item>@drawable/product_transaction</item>
        <item>@drawable/service_transaction</item>
    </array>

    <!--MANAGEMENT TITLE-->
    <string name="supplier_management">Supplier Management</string>
    <string name="customer_management">Customer Management</string>
    <string name="pet_management">Pet Management</string>
    <string name="product_management">Product Management</string>
    <string name="service_management">Service Management</string>
    <string name="customer_pet_management">Customer\'s Pet Management</string>
    <string name="employee_management">Employee Management</string>
    <string name="pet_size_management">Pet Size Management</string>
    <string name="pet_type_management">Pet Type Management</string>

    <!--ADD-->
    <string name="add_size">Add Size</string>
    <string name="add_type">Add Type</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_product">Add Product</string>
    <string name="add_service">Add Service</string>
    <string name="add_customer_pet">Add Customer Pet</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="add_order_product">Add Order Product</string>
    <string name="add_detail_order_product">Add Detail Order Product</string>

    <!--EDIT-->
    <string name="edit_supplier">Edit Supplier</string>
    <string name="edit_service">Edit Service</string>
    <string name="edit_customer_pet">Edit Customer Pet</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_detail_order_product">Edit Detail Order Product</string>

    <!--SEARCH-->
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>

    <!--DATA MASTER TITLE-->
    <string name="customer">Customer</string>
    <string name="pet_size">Pet Size</string>
    <string name="pet_type">Pet Type</string>
    <string name="employee">Employee</string>
    <string name="supplier">Supplier</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="customer_pet">Customer Pet</string>

    <!--OTHER TITLE-->
    <string name="order_product">Order Product</string>
    <string name="transaction">Transaction</string>

    <!--LOG-->
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="deleted_at">Deleted at</string>
    <string name="last_employee">Last employee</string>

    <!--LOGIN-->
    <string name="login_id">Input Employee ID</string>
    <string name="login_password">Input Password</string>

    <!--STRING DATA-->
    <string name="content_desc">Image</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="choose">Choose</string>
    <string name="logout">Log Out</string>

    <!--FORM-->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="unit">Unit</string>
    <string name="stock">Stock</string>
    <string name="minimum_stock">Minimum stock</string>
    <string name="price">Price</string>
    <string name="birthdate">Birthdate</string>
    <string name="type">Type</string>
    <string name="role">Role</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="quantity">Quantity</string>
    <string name="done">Done</string>
    <string name="print">Print</string>

    <!--NEW FRAGMENT-->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--TRANSACTION-->
    <string name="add_detail_product_transaction">Add Detail Product Transaction</string>
    <string name="add_detail_transaction">Add Detail Transaction</string>
    <string name="add_detail_service_transaction">Add Detail Service Transaction</string>
    <string name="edit_detail_product_transaction">Edit Detail Product Transaction</string>
    <string name="edit_detail_service_transaction">Edit Detail Service Transaction</string>
    <string name="paid_off">Paid Off</string>
    <string name="not_yet_paid_off">Not Yet Paid Off</string>
    <string name="cancel">Cancel</string>
    <string name="product_transaction">Product Transaction</string>
    <string name="service_transaction">Service Transaction</string>

    <!--ERROR-->
    <string name="error_id">Employee number can\'t be empty</string>
    <string name="error_pass">Password can\'t be empty</string>
    <string name="error_name">Name can\'t be empty</string>
    <string name="error_address">Address can\'t be empty</string>
    <string name="error_birthdate">Birthdate can\'t be empty</string>
    <string name="error_phone_number">Phone number can\'t be empty</string>
    <string name="error_price">Price can\'t be empty</string>
    <string name="error_unit">Unit can\'t be empty</string>
    <string name="error_stock">Stock can\'t be empty</string>
    <string name="error_min_stock">Minimum stock can\'t be empty</string>
    <string name="error_role">Role can\'t be empty</string>
    <string name="error_quantity">Quantity can\'t be empty</string>
    <string name="error_zero_quantity">Quantity must more than 0</string>
    <string name="error_zero_price">Price must more than 0</string>

    <!--DETAIL-->
    <string name="detail_product_transaction">Detail Product Transaction</string>
    <string name="detail_order_product">Detail Order Product</string>
    <string name="detail_service_transaction">Detail Service Transaction</string>
    <string name="detail_supplier">Detail Supplier</string>
    <string name="detail_customer">Detail Customer</string>
    <string name="detail_customer_s_pet">Detail Customer\'s Pet</string>
    <string name="detail_employee">Detail Employee</string>
    <string name="detail_pet">Detail Pet</string>
    <string name="detail_product">Detail Product</string>
    <string name="detail_service">Detail Service</string>
    <string name="detail">Detail</string>
    <string name="detail_transaction">Detail Transaction</string>

    <!--NUMBER-->
    <string name="employee_number">Employee ID</string>
    <string name="order_product_number">Order Product ID</string>
    <string name="transaction_number">Transaction ID</string>

    <!--OTHER-->
    <string name="status">Status</string>
    <string name="total_price">Total Price</string>
    <string name="customer_s_pet">Customer\'s Pet</string>
    <string name="x">x</string>
    <string name="rp">Rp. </string>
    <string name="welcome">Welcome</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="pet_s_name">Pet\'s Name</string>
    <string name="splash">Kouvee Pet Shop Data Management</string>
    <string name="kouvee_pet_shop">Kouvee Pet Shop</string>
    <string name="tribute">This is data management for Kouvee Pet Shop. Admin and Customer Service have an access to this application. Enjoy!</string>
    <string name="more_info">made with laf, for P3L</string>
    <string name="icon_source">*all icon from flaticon.com</string>
    <string name="choose_supplier">Choose Supplier</string>
    <string name="printed_at">Printed At</string>
    <string name="choose_pet">Choose Pet</string>
    <string name="last_cs">Last Customer Service</string>
    <string name="last_cashier">Last Cashier</string>
    <string name="discount">Discount</string>
    <string name="payment_status">Payment Status</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="order_product_log">Order Product Log</string>
    <string name="transaction_log">Transaction Log</string>
    <string name="recapitulation">Recapitulation</string>

</resources>
