<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_gravity="center"
    android:layout_margin="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".customerpet.AddCustomerPetFragment">

    <ImageButton
        android:id="@+id/btn_close"
        android:src="@drawable/ic_close"
        android:background="@android:color/white"
        android:layout_margin="8dp"
        android:layout_gravity="end|top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/add_customer_pet"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/birthdate"
            android:hint="@string/birthdate"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/id_customer"
            android:hint="@string/customer"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/id_type"
            android:hint="@string/type"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_add"
            android:text="@string/add"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_gravity="end|bottom"
        android:layout_margin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</FrameLayout>